--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -69,7 +69,7 @@ ul, ol {
 ul { list-style: none; }
 
 li ul {
-  margin: 3px 5px;
+  margin: 3px 5px
 }
 
 dl { padding: 10px; margin: 0; }
@@ -545,6 +545,12 @@ a.github-link img
   z-index: 100;
 }
 
-.page-id, .variable-name, .setting-name, .data-type, .markup-tag, .filename, .code {
+.page-id, .variable-name, .setting-name, .data-type, .markup-tag, .filename, .code
+{
   font-family: "Courier New", Courier, monospace;
+}
+
+li sup
+{
+  font-size: xx-small;
 }
